Fix: Centered Label - Prevent overflow and unwinding #508
This is next commit's follow-up.
https://github.com/black7375/Firefox-UI-Fix/commit/8ffcd5469786ab1e6806e190a9b1a732a8aba0fc

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -6971,7 +6971,7 @@
     }
     .tab-label,
     .tab-secondary-label {
-      overflow: hidden;
+      overflow: clip;
     }
     .tabbrowser-tab[selected]:not(:hover) .tab-label-container:not([textoverflow]),
     .tabbrowser-tab:not(:hover, [pinned]) .tab-label-container:not([textoverflow]) {
